2011-2/TPs/Guia_01/08-09/435049/Exercicios.txt
// Nome: Lorena Danielle Gonçalves Bento 
// Matricula: 435049 

============================Exemplo0001===========================================
Exemplo0001 - buffer
Sem erros
Saídas: 
0	0 = 0
1	1 = 1
3	0 = 0


=============================Exemplo0002==========================================
Exemplo0002 - NOT
Erros:
Exemplo0001.v:37: syntax error 			//erro na digitação
Exemplo0001.v:37: error: malformed statement

Alterações: Porta p negada.
Saídas:
~a = s

~0 = 1
~1 = 0

 
=============================Exemplo0003==========================================
Exemplo0003 - AND
Sem erros
Alterações: Uma porta q, um registrador b.
Saídas:
0 & 0 = z
0 & 0 = 0
0 & 1 = 0
1 & 0 = 0
1 & 1 = 1


=============================Exemplo0004==========================================
Exemplo0004 - OR
Sem erros
Saídas:
a & b = s

0 & 0 = 0
0 & 1 = 1
1 & 0 = 1
1 & 1 = 1


=============================Exemplo0005==========================================
Exemplo0005 - XOR
Sem erros
Alterações:
Todas as 3 portas sao vetores de 4 bits, assim como os registradores e a conexão.

Saídas:
a ^ b = s

0011 ^ 0101 = 0110
0000 ^ 0000 = 0000
0010 ^ 0001 = 0011
0001 ^ 0011 = 0010
0101 ^ 0010 = 0111
1010 ^ 0011 = 1001
1001 ^ 0011 = 1010



===============================Exercicios=========================================

01.) Construir a tabela-verdade para a porta NAND com 2 entradas.
Obs.: Usar operador ( ~(a&b) ) na definição do módulo.
Usar $display ().

Saída:
0 & 0 = z
0 & 0 = 1
0 & 1 = 1
1 & 0 = 1
1 & 1 = 0


02.) Construir a tabela_verdade para a porta NOR com 2 entradas.
Obs.: Usar operador ( ~(a|b) ) na definição do módulo.
Usar $monitor ().

Saída:
0 & 0 = z
0 & 0 = 1
0 & 1 = 0
1 & 0 = 0
1 & 1 = 0


03.) Construir a tabela_verdade para a porta XNOR com 2 entradas.
Obs.: Usar operador ( ~(a^b) ) na definição do módulo.

Saída:
0 & 0 = z
0 & 0 = 1
0 & 1 = 0
1 & 0 = 0
1 & 1 = 1


04.) Construir a tabela_verdade para a porta AND com 3 entradas.	
Obs.: Usar na definição do módulo a propriedade de Morgan.

Saída:
0 0 0= 0
0 0 1= 0
0 1 0= 0
0 1 1= 0
1 0 0= 0
1 0 1= 0
1 1 0= 0
1 1 1= 1


05.) Construir a tabela_verdade para a porta OR com 3 entradas.
Obs.: Usar na definição do módulo a propriedade de Morgan.

Saída:
0 0 0= 0
0 0 1= 1
0 1 0= 1
0 1 1= 1
1 0 0= 1
1 0 1= 1
1 1 0= 1
1 1 1= 1










